--- a/openai-test.html
+++ b/openai-test.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>OpenAI Stream Test</title>
+    <title>OpenAI Class Test</title>
 </head>
 <body>
     <h1>OpenAI Class Test</h1>
