got videos working for mobile

--- a/chat.html
+++ b/chat.html
@@ -16,9 +16,10 @@
     <script defer src="youtube.js"></script>
     <style>
         body,html{margin:0;height:100%;font:large 'Perfect DOS VGA 437',sans-serif;background:black;color:white}
+        label{font-size:medium}
         textarea{font:large 'Perfect DOS VGA 437',sans-serif;background-color:#B3C0B7}
         button,.btn{font:'Perfect DOS VGA 437',sans-serif;background:gray;color:white;cursor:pointer}
-        .btn{width:50vw;text-align:center;height:2.5em}
+        .btn{width:33vw;text-align:center;height:2.5em}
         legend{text-align:left;cursor:pointer;user-select:none;color:aqua}
         legend:hover,.btn:hover,#resizer:hover{color: aqua}
         #editor-wrapper{position:relative;max-height:90vh;overflow:auto;width:100%;max-width:calc(100vw - 50px)}
@@ -31,9 +32,9 @@
     <textarea id="prompt-input" style="width:100%;box-sizing: border-box;height:4em;font-size:large;word-wrap:break-word" placeholder="Enter prompt or touch screen for voice prompt"></textarea>
 
     <div style="text-align:right">
-        <input type="checkbox" id="youtube-cbx" style="width:2em;height:2em"><label for="code-cbx">YouTube</label>
-        <input type="checkbox" id="code-cbx" style="width:2em;height:2em"><label for="code-cbx">Code</label>
-        <input checked type="checkbox" id="enable-voice" style="width:2em;height:2em"><label for="enable-voice">Voice</label>
+        <input type="checkbox" id="youtube-cbx" style="width:1.5em;height:1.5em"><label for="code-cbx">YouTube</label>
+        <input type="checkbox" id="code-cbx" style="width:1.5em;height:1.5em"><label for="code-cbx">Code</label>
+        <input checked type="checkbox" id="enable-voice" style="width:1.5em;height:1.5em"><label for="enable-voice">Voice</label>
         <button id="submit-button" class="btn">Submit</button>
     </div>
     <div class="videos"></div>
@@ -72,7 +73,7 @@
         promptInput.focus(); voiceCbx.disabled = false;
         voiceCbx.on('change', e => localStorage.setItem('ENABLE_VOICE', e.target.checked));
         voiceCbx.checked = (localStorage.getItem('ENABLE_VOICE') ?? "true") === "true";
-        if (isMobile) $attr('for', 'code-cbx').style.display = youtubeCbx.style.display = 'none';
+        //if (isMobile) $attr('for', 'code-cbx').style.display = youtubeCbx.style.display = 'none';
         videos.style.display = 'none';
         submitBtn.on('click', async () => {
             if (youtubeCbx.checked) {
