--- a/html/firebase.html
+++ b/html/firebase.html
@@ -31,10 +31,11 @@
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
 
   <script>
-    const apiKey = localStorage.getItem('FIREBASE_API_KEY') || (prompt("Please input firebase API key (stored in browser cache)", "") || '').trim();
-            
+    let token = '';
+    if (!(token = localStorage.getItem('FIREBASE_API_KEY')))
+                localStorage.setItem('FIREBASE_API_KEY', token = prompt("Please input firebase API key (stored in browser cache)", ""))        
     var firebaseConfig = {
-      apiKey: apiKey,
+      apiKey: token,
       authDomain: "jay23606-d5163.firebaseapp.com",
       projectId: "jay23606-d5163",
       storageBucket: "jay23606-d5163.appspot.com",
