--- a/html/firebase.html
+++ b/html/firebase.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <h1>Welcome to our website</h1>
+  <h1>Welcome</h1>
 
   <!-- Sign in with Google button -->
   <button onclick="signInWithGoogle()">Sign in with Google</button>
