--- a/html/firebase.html
+++ b/html/firebase.html
@@ -3,7 +3,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <title>Firebase Authentication and Database Example</title>
 </head>
 <body>
