--- a/html/react-todo.html
+++ b/html/react-todo.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div id="root"></div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.14.0/umd/react.development.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.14.0/umd/react-dom.development.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.15.0/babel.min.js"></script>
   <script type="text/babel">
     class TodoList extends React.Component {
