--- a/html/react-todo.html
+++ b/html/react-todo.html
@@ -2,58 +2,69 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Todo List</title>
-</head>
-<body>
-  <div id="root"></div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.14.0/umd/react.development.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.14.0/umd/react-dom.development.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.15.0/babel.min.js"></script>
-  <script type="text/babel">
-    class TodoList extends React.Component {
-      constructor(props) {
-        super(props);
-        this.state = {
-          todos: [],
-          newTodo: ''
-        };
-        this.handleInputChange = this.handleInputChange.bind(this);
-        this.handleSubmit = this.handleSubmit.bind(this);
+  <head>
+    <meta charset="UTF-8" />
+    <title>React Todo List with Delete</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.13.1/umd/react.production.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.13.1/umd/react-dom.production.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+    <script type="text/babel">
+      class TodoList extends React.Component {
+        constructor(props) {
+          super(props);
+          this.state = { todos: [], newTodo: "" };
+          this.handleAddTodo = this.handleAddTodo.bind(this);
+          this.handleDeleteTodo = this.handleDeleteTodo.bind(this);
+        }
+
+        handleAddTodo() {
+          const { newTodo, todos } = this.state;
+
+          if (newTodo.trim() !== "") {
+            const newTodos = [...todos, newTodo.trim()];
+            this.setState({ todos: newTodos, newTodo: "" });
+          }
+        }
+
+        handleDeleteTodo(index) {
+          const { todos } = this.state;
+          const newTodos = todos.filter((todo, i) => i !== index);
+          this.setState({ todos: newTodos });
+        }
+
+        render() {
+          const { todos, newTodo } = this.state;
+
+          return (
+            <div>
+              <h1>Todo List</h1>
+              <input
+                type="text"
+                value={newTodo}
+                onChange={(event) =>
+                  this.setState({ newTodo: event.target.value })
+                }
+              />
+              <button onClick={this.handleAddTodo}>Add</button>
+              <ul>
+                {todos.map((todo, index) => (
+                  <li key={index}>
+                    {todo}
+                    <button onClick={() => this.handleDeleteTodo(index)}>
+                      Delete
+                    </button>
+                  </li>
+                ))}
+              </ul>
+            </div>
+          );
+        }
       }
 
-      handleInputChange(event) {
-        this.setState({newTodo: event.target.value});
-      }
-
-      handleSubmit(event) {
-        event.preventDefault();
-        const newTodos = [...this.state.todos, this.state.newTodo];
-        this.setState({todos: newTodos, newTodo: ''});
-      }
-
-      render() {
-        const todos = this.state.todos.map((todo, index) => (
-          <li key={index}>{todo}</li>
-        ));
-
-        return (
-          <div>
-            <h1>Todo List</h1>
-            <form onSubmit={this.handleSubmit}>
-              <input type="text" value={this.state.newTodo} onChange={this.handleInputChange} />
-              <button type="submit">Add Todo</button>
-            </form>
-            <ul>
-              {todos}
-            </ul>
-          </div>
-        );
-      }
-    }
-
-    ReactDOM.render(<TodoList />, document.getElementById('root'));
-  </script>
-</body>
+      ReactDOM.render(<TodoList />, document.getElementById("root"));
+    </script>
+  </body>
 </html>
